package EJ31;

public class Autor {
    String nombre;
    String fecha_nacimiento;
    String nacionalidad;
}
