package EJ31;

public enum Estado_Copia {
    EN_BIBLIOTECA,
    PRESTADO,
    CON_RETRASO,
    EN_REPARACION
}
