@startuml
'https://plantuml.com/class-diagram

class Libro {
    String nombre
    int año
    List<Autor> autores
    List<Copia_Libro> copias
    Categoria categoria
    String editorial

}

class Copia_Libro {
    int id
    Libro libro
    Estado_Copia estado

}
class Prestamo_Copia {
    Copia_Libro copia
    Lector lector
    LocalDate fecha_prestamo


    Boolean estaVencido()
    LocalDate fechaVencimiento()
    int diasVencido()
    void cerrar()
}
class Autor {
    String nombre
    String fecha_nacimiento
    String nacionalidad
}

class multaController {

    Void getionarMulta(Prestamo_Copia prestamo, Lector lector)
    Int calcularDiasMulta()
    Multa generarMulta(Int cantDias,LocalDate fechaIncio)
}

enum Categoria {
NOVELA
TEATRO
POESIA
ENSAYO
}
enum Estado_Copia {
EN_BIBLIOTECA
PRESTADO
CON_RETRASO
EN_REPARACION
}

class Lector{
    String nombre
    List<Prestamo_Copia> prestamos
    List<Multa> multas

    Int getCantidadDePrestamos()
    Boolean tienePrestamosVencidos()
    Boolean tieneMultasVigentes()
    Boolean puedePedirPrestamo()
    Int cantPrestamosActuales()
    Void pedirPrestamo(Libro libro)
    Void agregarMulta(Multa multa)
}
class Multa{
    LocalDate fecha_inicio
    int cantDias

    Boolean estaVigente()

}
class Repositorio{

    Copia_Libro prestarCopia()
    Boolean hayCopiaDe(Libro libro)
}

Libro --> Categoria
Libro -->"*" Autor
Libro -->"*" Copia_Libro

Copia_Libro --> Estado_Copia
Copia_Libro --> Libro

Prestamo_Copia --> Copia_Libro

Lector -->"*" Multa
Lector -->"*" Prestamo_Copia

multaController ..> Lector
multaController ..> Prestamo_Copia

Repositorio -->"*" Libro
Repositorio -->"*" Lector

@enduml